fixed alignment issue on temperature row

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -6,6 +6,7 @@
   color: black;
   text-align: center;
   font-family: "Quicksand", sans-serif;
+  font-size: 30px;
 }
 
 .weather-card-main {
@@ -82,7 +83,7 @@ ul {
 }
 
 .row {
-  padding: 20px;
+  padding: 10px;
   margin: 0 auto;
 }
 
@@ -96,13 +97,23 @@ div.col-6 {
   font-size: 15px;
   padding: 0px;
   margin: 0 auto;
+  margin-left: 25px;
 }
 
 .Weather img {
   height: 64px;
   display: inline-block;
+  margin: 0 auto;
+  padding-right: 10px;
 }
 
 #main-temp {
-  font-size: 30px;
+  font-size: 50px;
+  margin-bottom: 0px;
+}
+
+#celsius {
+  font-size: 15px;
+  color: black;
+  vertical-align: super;
 }
